Fix Content title overflow (albums and artists) and remove box-shadow causing odd effect on content-wrapper.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -432,7 +432,6 @@ li {
   overflow-x: hidden;
   overflow-y: hidden;
   padding: 0px 20px 0px 20px;
-  box-shadow: -10px 0px 10px -5px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
 }
 
@@ -815,7 +814,7 @@ li:last-of-type {
 .content-header-info {
   display: flex;
   align-items: center;
-  font-size: clamp(.6rem, 1vw, 1rem);
+  font-size: clamp(5px, 1vw, 1rem);
 }
 
 .h1-info {
